chore: Bump version to 0.0.5 and add date time and number support

--- a/example/lib/l10n/app_ckb.arb
+++ b/example/lib/l10n/app_ckb.arb
@@ -1,4 +1,21 @@
 {
     "@@locale": "ckb",
-    "appName": "فلاتر"
+    "appName": "يك دو سي",
+    "stringFormat": "{version} نسخه",
+    "@stringFormat": {
+        "placeholders": {
+            "version": {
+                "type": "String"
+            }
+        }
+    },
+    "datetimeFormat": "{version} نسخه",
+    "@datetimeFormat": {
+        "placeholders": {
+            "version": {
+                "type": "DateTime",
+                "format": "yMd"
+            }
+        }
+    }
 }
